package ui.controller;

public interface ViewController {
    void show();
    void hide();
}


