@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package ui.controller {
      abstract class BaseFrameController {
          ~ frame : JFrame
          + show()
          + hide()
      }
    }
  }
  

  package  {
    package ui.controller {
      class FlightSearchFrameController {
          - departureComboBox : JComboBox
          - destinationComboBox : JComboBox
          - departureDateField : JTextField
          - costRadioButton : JRadioButton
          - timeRadioButton : JRadioButton
          - backButton : JButton
          - searchFlightsButton : JButton
          + FlightSearchFrameController()
          - initComponents()
          - initListeners()
          + propertyChange()
      }
    }
  }
  

  package  {
    package ui.controller {
      class SearchFlightButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      class FlightSearchResultsController {
          - flightSearchResultsTable : JTable
          - bookFlightButton : JButton
          - searchFlightsButton : JButton
          + FlightSearchResultsController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class LoginFrameController {
          - loginButton : JButton
          - backButton : JButton
          - usernameField : JTextField
          - passwordField : JPasswordField
          - errorLabel : JLabel
          + LoginFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class LoginButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      class MainMenuFrameController {
          - bookFlightsButton : JButton
          - cancelFlightsButton : JButton
          - orderHistoryButton : JButton
          - logoutButton : JButton
          - usernameLabel : JLabel
          - availablePointsLabel : JLabel
          + MainMenuFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class RegisterFrameController {
          - usernameField : JTextField
          - emailField : JTextField
          - passwordField1 : JPasswordField
          - passwordField2 : JPasswordField
          - signUpButton : JButton
          - backButton : JButton
          - errorLabel : JLabel
          + RegisterFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  package  {
    package ui.controller {
      class SignUpButtonListener {
          + actionPerformed()
      }
    }
  }
  

  package  {
    package ui.controller {
      interface ViewController {
          {abstract} + show()
          {abstract} + hide()
      }
    }
  }
  

  package  {
    package ui.controller {
      class WelcomeFrameController {
          - loginButton : JButton
          - registerButton : JButton
          + WelcomeFrameController()
          - initComponents()
          - initListeners()
      }
    }
  }
  

  BaseFrameController -up-|> ViewController
  FlightSearchFrameController -up-|> PropertyChangeListener
  FlightSearchFrameController -up-|> BaseFrameController
  FlightSearchFrameController o-- IMainMenuCoordinator : coordinator
  FlightSearchFrameController o-- FlightSearchModel : model
  FlightSearchFrameController +-down- SearchFlightButtonListener
  SearchFlightButtonListener -up-|> ActionListener
  FlightSearchResultsController -up-|> BaseFrameController
  FlightSearchResultsController o-- IMainMenuCoordinator : coordinator
  LoginFrameController -up-|> BaseFrameController
  LoginFrameController o-- ILoginCoordinator : coordinator
  LoginFrameController o-- LoginModel : model
  LoginFrameController +-down- LoginButtonListener
  LoginButtonListener -up-|> ActionListener
  MainMenuFrameController -up-|> BaseFrameController
  MainMenuFrameController o-- IMainMenuCoordinator : coordinator
  RegisterFrameController -up-|> BaseFrameController
  RegisterFrameController o-- ILoginCoordinator : coordinator
  RegisterFrameController o-- RegisterModel : model
  RegisterFrameController +-down- SignUpButtonListener
  SignUpButtonListener -up-|> ActionListener
  WelcomeFrameController -up-|> BaseFrameController
  WelcomeFrameController o-- ILoginCoordinator : coordinator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
